# streamkeep

./: .gitattributes  .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.app.json  tsconfig.node.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
crates/streamkeep-app-core/: Cargo.toml
crates/streamkeep-app-core/src/: lib.rs
crates/streamkeep-download-core/: Cargo.toml
crates/streamkeep-download-core/src/: lib.rs
crates/streamkeep-hls-core/: Cargo.toml
crates/streamkeep-hls-core/src/: lib.rs
crates/streamkeep-hls-core/tests/: master_playlist.rs
crates/streamkeep-metadata-core/: Cargo.toml
crates/streamkeep-metadata-core/src/: lib.rs
crates/streamkeep-storage-core/: Cargo.toml
crates/streamkeep-storage-core/src/: lib.rs
crates/streamkeep-test-support/: Cargo.toml
crates/streamkeep-test-support/src/: lib.rs
docs/: testing-android.md
plugins/tauri-plugin-streamkeep-capture/: .gitignore  Cargo.toml  build.rs
plugins/tauri-plugin-streamkeep-capture/android/: build.gradle.kts
plugins/tauri-plugin-streamkeep-capture/android/src/main/: AndroidManifest.xml
plugins/tauri-plugin-streamkeep-capture/android/src/main/java/: StreamkeepCapturePlugin.kt  StreamkeepDownloadService.kt  StreamkeepMediaStorePublisher.kt  StreamkeepMp4Remuxer.kt  StreamkeepPlayerActivity.kt  StreamkeepPlayerRegistry.kt  StreamkeepPublishedDownloadDeleter.kt  StreamkeepThumbnailer.kt
plugins/tauri-plugin-streamkeep-capture/permissions/autogenerated/: reference.md
plugins/tauri-plugin-streamkeep-capture/permissions/autogenerated/commands/: createThumbnail.toml  deletePublishedDownload.toml  getPlayerState.toml  goBack.toml  goForward.toml  loadUrl.toml  openPlayer.toml  openUri.toml  publishToDownloads.toml  remuxToMp4.toml  startDownloadKeepAlive.toml  stopDownloadKeepAlive.toml
plugins/tauri-plugin-streamkeep-capture/permissions/schemas/: schema.json
plugins/tauri-plugin-streamkeep-capture/src/: lib.rs  mobile.rs
scripts/: README.md  prepare-android.mjs  run-package-script.mjs  with-windows-sdk.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/app/: commands.rs
src-tauri/src/core/download/: commands.rs
src-tauri/src/core/player/: commands.rs
src-tauri/src/core/settings/: commands.rs
src-web/: index.html  main.ts
src-web/api/: capture.ts  commands.ts  downloads.ts  player.ts  settings.ts
src-web/app/: App.vue  router.ts  setup-app.ts
src-web/app/components/: AppButton.vue  DetectionDialog.vue  IconGlyph.vue  ProgressBar.vue  StatusChip.vue
src-web/app/layouts/: MainShell.vue
src-web/app/screens/: DetectionScreen.vue  DiagnosticsScreen.vue  DownloadDetailScreen.vue  DownloadsScreen.vue  HomeScreen.vue  PlayerScreen.vue  SettingsScreen.vue
src-web/app/styles/: main.css
src-web/domain/: detection.test.ts  detection.ts
src-web/stores/: detection.ts  downloads.ts
src-web/utils/: dom.ts
tests/: smoke.test.ts
