[workspace]
resolver = "3"
members = [
  "crates/*",
  "plugins/*",
  "src-tauri",
]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
license = "UNLICENSED"
repository = "https://github.com/streamkeep/streamkeep"

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "macros", "parsing", "serde"] }
tracing = "0.1.41"
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[profile.dev]
opt-level = "z"
debug = true
strip = "none"
debug-assertions = true
overflow-checks = true
lto = "off"
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false
