[package]
name = "streamkeep"
version = "0.1.0"
description = "Streamkeep"
authors = ["Streamkeep"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
log = "0.4"
serde.workspace = true
serde_json.workspace = true
streamkeep-app-core = { path = "../crates/streamkeep-app-core" }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-streamkeep-capture = { path = "../plugins/tauri-plugin-streamkeep-capture" }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-os = "2.3.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
