[package]
name = "streamkeep-download-core"
version = "0.1.0"
description = "Download orchestration contracts for Streamkeep"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
bytes = "1.11.1"
futures-util = "0.3.32"
m3u8-rs = "6.0.0"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls", "stream"] }
serde.workspace = true
streamkeep-hls-core = { version = "0.1.0", path = "../streamkeep-hls-core" }
thiserror.workspace = true
tracing.workspace = true
url = "2.5.8"

[dev-dependencies]
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }
