[package]
name = "streamkeep-hls-core"
version = "0.1.0"
description = "HLS playlist parsing and selection for Streamkeep"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
m3u8-rs = "6.0.0"
serde.workspace = true
thiserror.workspace = true
url = "2.5.8"

