[package]
name = "streamkeep-storage-core"
version = "0.1.0"
description = "Storage contracts for Streamkeep downloads and settings"
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
time.workspace = true
uuid.workspace = true

