[package]
name = "tauri-plugin-streamkeep-capture"
version = "0.1.0"
description = "Android capture and embedded player integration for Streamkeep"
authors = ["Streamkeep"]
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
links = "tauri-plugin-streamkeep-capture"

[build-dependencies]
tauri-plugin = { version = "2.5.4", features = ["build"] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.10.3", features = [] }
time.workspace = true
tracing.workspace = true

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
ts-to-mp4 = "0.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38.2"
windows = "0.61"
